Limit height of example iframes

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -28,6 +28,10 @@ figure{
   border:      1px dashed #efefef;
 }
 
+figure iframe{
+  max-height: 500px;
+}
+
 
 h1{
   border-top:  1px dashed #dedede;
