--- a/src/assets/css/prism.scss
+++ b/src/assets/css/prism.scss
@@ -1,4 +1,4 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+git+http+php+sql */
+/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+php+sql */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -9,14 +9,13 @@ code[class*="language-"],
 pre[class*="language-"] {
 	color: black;
 	text-shadow: 0 1px white;
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	font-family: Consolas, Monaco, 'Andale Mono', monospace;
 	direction: ltr;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
-	word-wrap: normal;
-	line-height: 1.5;
+
 
 	-moz-tab-size: 4;
 	-o-tab-size: 4;
@@ -85,17 +84,14 @@ pre[class*="language-"] {
 .token.boolean,
 .token.number,
 .token.constant,
-.token.symbol,
-.token.deleted {
+.token.symbol {
 	color: #905;
 }
 
 .token.selector,
 .token.attr-name,
 .token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
+.token.builtin {
 	color: #690;
 }
 
@@ -103,9 +99,10 @@ pre[class*="language-"] {
 .token.entity,
 .token.url,
 .language-css .token.string,
-.style .token.string {
+.style .token.string,
+.token.variable {
 	color: #a67f59;
-	background: hsla(0, 0%, 100%, .5);
+	background: hsla(0,0%,100%,.5);
 }
 
 .token.atrule,
@@ -114,22 +111,14 @@ pre[class*="language-"] {
 	color: #07a;
 }
 
-.token.function {
-	color: #DD4A68;
-}
 
 .token.regex,
-.token.important,
-.token.variable {
+.token.important {
 	color: #e90;
 }
 
-.token.important,
-.token.bold {
+.token.important {
 	font-weight: bold;
-}
-.token.italic {
-	font-style: italic;
 }
 
 .token.entity {
